--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <title>E-School</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="icon/Logo.png">
+    <link rel="stylesheet" href="ICON/Logo.png">
     
 </head>
+
 <body>
     <div class="full-container background-bg">
         <div class="container">
             <nav>
                 <div class="logo">
-                    <img src="icon/Logo.png" alt="logo">
+                    <img src="ICON/Logo.png" alt="logo">
                 </div>
                 <div>
                     <ul>
@@ -58,7 +59,7 @@
         </div>
 
         <div class="image">
-            <img src="photos/Illustration.png" alt="">
+            <img src="photos/Illustration.png" alt="Books">
         </div>
     </div>
 </section>
@@ -125,7 +126,7 @@
                         <img src="Photos/Morder psyc.png" class="card-img-top" alt="...">
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Morder Pyschology</h5>
+                        <h5 class="card-title">Morden Pyschology</h5>
                         <p class="card-text text-muted">Designation</p>
                         <button class="click-btn">Buy Course</button>
                     </div>
@@ -145,7 +146,7 @@
                         <img src="photos/Morder pychons.png" class="card-img-top" alt="...">
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Morder Pyschology</h5>
+                        <h5 class="card-title">Morden Pyschology</h5>
                         <p class="card-text text-muted">Designation</p>
                         <button class="click-btn">Buy Course</button>
                     </div>
@@ -165,7 +166,7 @@
                         <img src="photos/Morder pyschology.png" class="card-img-top" alt="...">
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Morder Pyschology</h5>
+                        <h5 class="card-title">Morden Pyschology</h5>
                         <p class="card-text text-muted">Designation</p>
                         <button class="click-btn">Buy Course</button>
                     </div>
@@ -185,7 +186,7 @@
     </div>
 </section>
 <!-- Online Course Part End -->
-<!-- Testimonial part Start -->
+
 <section id="testimonial" class="testimonial-part">
 
     <div class="testimonial-common-heading text-center">
